# yatlib

./: .clang-format  .clang-tidy  .cmake-format  .cmake-format.yaml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  NOTICE  README.md
cmake/: CBP.cmake  CPM.cmake  CompilerWarnings.cmake  StaticAnalyzers.cmake  YatConfig.cmake.in
include/: CMakeLists.txt
include/yatlib/: CMakeLists.txt  README.md  __compat.hpp  __config.hpp  algorithm.hpp  any.hpp  array.hpp  bit.hpp  bitmap.hpp  chrono.hpp  concepts.hpp  cstring_view.hpp  endian.hpp  features.hpp  filesystem.hpp  format.hpp  iterator.hpp  memory.hpp  optional.hpp  ranges.hpp  span.hpp  type_traits.hpp  utility.hpp  variant.hpp  yatlib.hpp
tests/: CMakeLists.txt  any_test.cpp  array_test.cpp  bit_cast_test.cpp  bit_ops_test.cpp  byteswap_test.cpp  catch_config.hpp  catch_main.cpp  common.hpp  endian_test.cpp  format_test.cpp  iterator_test.cpp  memory_test.cpp  optional_test.cpp  refcnt_ptr_test.cpp  span_test.cpp  type_traits_test.cpp  utility_test.cpp  variant_test.cpp  yatlib_test.cpp
